# MemoryMCP

./: .gitignore  CLAUDE.md  MEMORY_DESIGN.md  README.md  claude_config_example.json  main.py  pyproject.toml  server.py
memorymcp/: __init__.py  context_utils.py  memory_store.py  server.py  server_old.py  tools.py
