[project]
name = "memorymcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.4",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
]
